# regex_pics_del

./: Cargo.toml  README.md  build.sh
src/: main.rs
