[package]
name = "_reg_q_renamer"
version = "1.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
regex = { version = "1.10.2" }
winapi = { version = "0.3.9" }
