[package]
name = "regex_pics_del"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true

[dependencies]
data-encoding = "2.5.0"
regex = { version = "1.10.4" }
sha3 = "0.10.8"
